--- a/about meproj.html
+++ b/about meproj.html
@@ -106,6 +106,7 @@
           <h5 style="text-align:center;">Links</h5>
           <div style="border: 6px solid white; padding: 6px 15px 4px 10px; width: fit-content;">
               <p>Github</p>
+              <p>Google Collab</p>
               <p>Resume</p>
               <p>Facebook</p>
               <p>LinkedIn</p>
@@ -342,7 +343,25 @@
   
     <h3>Programming</h3>
 
-    <p>programming work ive done.</p>
+    <p>Currently, most of the coding work i have done has been in classes. </p>
+    <!--assembly and atari-->
+    <h4>Assembly Language</h4>
+    <p>In this class we learned how to create programs using Risc-V. We learned to coded the Tower of Hanoi game and a number conversion from binary, Decimal, and Hexadecimal. It is a really hard language for those who are used to the way that you write with high-level languages.It gives a lot of control, but it needs a line of code for every single movement it makes. One of the last assignments we made in the class was an atari game. It was a group project. My group decided to go with a combination of snake and frogger. While it was never finsihed, we did get it to work to a certain extent. Firstly, i created the sprite. It was an accident, but it became a frog looking creature. The frog had to be able to move across the screen and collect little balls. The balls would then spawn in a different spot once it interacted with the sprite. It took a lot of effort and late nights, but we eventually got the frog to be able to interact with the ball and move around on screen.</p>
+    <p>The link for the assignments for this class can be found at this GitHub Repository.</p>
+    <p>I am currently working my way through a Risc-V book on the language again, because while I didn't understand it then, I did like the language and simpliity through which everything worked. It was definitely hard to learn as there aren't many resources to be used. The resource we used the most was the online CREATOR compiler from GitHub. </p>
+    <!--add link for compiler later-->
+    <!--python-->
+    <h4>Python</h4>
+    <p>I went through all the basics of how to write in python. Most of the assignments I have created will be available in my Github, but the noteable projects i have worked on are creating a simple calculator, a simple webscraper, a gui application, a simple chatbot, and a simple weather dashboard.
+      During my Data Anayltics class, we learned how to use Numpy, Pandas, and Matplotlib. We also learned how to use web scrapers.
+
+    </p><!--explain more in depth about the small side projets from the book/-->
+
+    <!--Java-->
+    <!---Expalin about having learned the basics in this class, and pick up a book about it along with the gae development one we have already-->
+
+    <!--C languages-->
+    <!--explain the assignm,ents youve done in the programing class, and pick up another book for it.-->
 
 </div><!--programming tab close-->
 
@@ -350,7 +369,27 @@
 
     <h3>Web Design</h3>
 
-    <p>web design work</p>
+    <p>Web Development was the first programming i learned to do. I have spent a lot of time learning how to do a lot of things in HTML, CSS, and JavaScript, including this website.</p>
+    <h4>This website</h4>
+    <p></p>
+    <h4>Advanced Web Development</h4>
+    <h5>HTML, CSS, and JavaScript</h5>
+    <p>add in bootscrap parts</p>
+    <h5>React and Angular</h5>
+    <p></p>
+    <h5>Backend Languages</h5>
+    <p></p>
+
+    <h4>ANC Course</h4>
+    <h5>Lizard Adoption</h5>
+    <p>As another class project, the Adopt a Pet page is a simplistic page designed to convince my teacher to get a frilled-neck lizard as his next pet. It gives a species overview, care instructions, behavior, and whether or not it was legal to own in the state of Arkansas. It includes text, hyperlinks, pictures, and a table. It is easy to see the improvement that I had made in this project.</p>
+    <p>A view of this website can be found at <a href="http://woodall.atwebpages.com/adoption3.htm" target="_blank">woodall.atwebpages.com/adoption3.htm</a></p>
+    <p></p>
+    <h5>Blog</h5>
+    <p>This project was part of a class assignment focused on learning HTML, CSS, and JavaScript. The end goal was to create a website following the Dos and Don'ts my professor created. I created a photography portfolio and blog.
+      <br>It included a home page, image gallery allowing you to move through the different topics nad pictures available, a information page telling the tools I used, and a blog. It is currently unfinished, but if i were to go back and finish it, it would have a working internal navigation for the blog page, better structure, and a lightbox functionality for the pictures.</p>
+      </p>
+      <p>A view of the website can be found at <a href="http://woodall.atwebpages.com/homepg.htm" target="_blank">woodall.atwebpages.com/hompe.htm</a> </p>
 
 </div><!--web tab close-->
 
@@ -358,7 +397,11 @@
 
     <h3>Databases</h3>
 
-    <p>database work</p>
+    <p>I decided to take a class in my Associate's Degree about databases. It was mostly done in Access, but in the last month, we learned about MySQL. I then took a course at SEMO learning more about the different types of databases.</p>
+    <h4>Access Database for MGM</h4>
+    <p></p>
+    <h4>Courses Database</h4>
+    <p></p>
 
 </div><!--databases tab close-->
 
@@ -366,7 +409,15 @@
 
     <h3>Current Work</h3>
 
-    <p>current projects</p>
+    <p>I like to challenge myself with different projects. When I hit a wall in my work, I like to see if taking a break will help me get a clearer head. By taking a break, I mean I usually work on a different project in a different language. 
+      A few of these projects haven't been started, but they've been planned out.
+    </p>
+    <h4>AWS class assignment</h4>
+    <p></p>
+    <h4>Media Game</h4>
+    <p></p>
+    <h4>Restaurant suggestions</h4>
+    <p>This one has not been started, but my friends and I have been planning and talking about it for several months as a way to stop eating the exact same restaurants every single time we go out to eat.</p>
 
 </div><!--current tab close-->
 
